# burnt

./: .gitignore  .gitmodules  Cargo.toml  README.md
burn-rwkv/: Cargo.toml
burn-rwkv/src/: error.rs  inference.rs  lib.rs  model.rs  safetensors.rs  visitor.rs
burn-safetensors/: Cargo.toml
burn-safetensors/src/: error.rs  lib.rs  manifest.rs
notebooks/: flashattention.ipynb  h3.ipynb
