[package]
name = "burn-safetensors"
version = "0.0.1"
edition = "2021"

[dependencies]
burn-core = { workspace = true }
burn-tensor = { workspace = true }
half = { workspace = true }
safetensors = { workspace = true }

mmap-rs = "0.5"
# rayon = { version = "1.7", optional = true }
thiserror = "1.0"
